fix: segmented control - 레이블이 truncate되는 문제를 해결해요

--- a/packages/stylesheet/segmentedControl.css
+++ b/packages/stylesheet/segmentedControl.css
@@ -33,7 +33,7 @@
     inset-inline: 0;
     transform: translateY(-50%);
     inset-block-start: 50%;
-    padding-inline: var(--seed-v3-unit-x4);
+    padding-inline: calc(var(--seed-v3-unit-x4) - 1px);
     text-align: center;
     font-weight: var(--seed-v3-font-weight-medium);
     font-size: var(--seed-v3-font-size-t5);
